--- a/package.json
+++ b/package.json
@@ -17,41 +17,27 @@
         "react-apollo": "2.1.4",
         "react-dom": "16.3.2",
         "react-router-dom": "4.2.2",
+        "react-scripts": "1.1.4",
         "semantic-ui-css": "2.3.1",
-        "semantic-ui-react": "0.80.0"
+        "semantic-ui-react": "0.80.0",
+        "styled-components": "3.2.6"
     },
     "devDependencies": {
-        "babel-cli": "6.26.0",
-        "babel-core": "6.26.3",
         "babel-eslint": "8.2.3",
-        "babel-jest": "22.4.3",
-        "babel-plugin-root-import": "5.1.0",
-        "babel-plugin-transform-class-properties": "6.24.1",
-        "babel-plugin-transform-object-rest-spread": "6.26.0",
-        "babel-plugin-transform-runtime": "6.23.0",
-        "babel-preset-env": "1.6.1",
-        "babel-preset-react": "6.24.1",
         "eslint": "4.19.1",
         "eslint-config-airbnb": "16.1.0",
-        "eslint-import-resolver-babel-plugin-root-import": "1.1.1",
         "eslint-plugin-import": "2.11.0",
         "eslint-plugin-jest": "21.15.1",
         "eslint-plugin-jsx-a11y": "6.0.3",
         "eslint-plugin-promise": "3.7.0",
-        "eslint-plugin-react": "7.7.0",
+        "eslint-plugin-react": "7.8.2",
         "jest": "22.4.3",
-        "parcel-bundler": "1.8.1",
         "unfetch": "3.0.0"
     },
     "scripts": {
-        "start": "parcel src/index.html",
+        "start": "react-scripts start",
         "lint": "eslint -c .eslintrc src",
-        "test": "jest",
-        "test:watch": "jest --watch"
-    },
-    "jest": {
-        "watchPathIgnorePatterns": [
-            "<rootDir>/.*/__fixtures__/.*"
-        ]
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom"
     }
 }
