--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
         "graphql": "0.13.2",
         "graphql-tag": "2.9.2",
         "immutable": "4.0.0-rc.9",
+        "konva": "2.1.3",
         "lodash": "4.17.10",
+        "randomcolor": "0.5.3",
         "react": "^16.3.2",
         "react-apollo": "2.1.4",
         "react-dom": "16.3.2",
+        "react-konva": "1.7.3",
         "react-router-dom": "4.2.2",
         "react-scripts": "1.1.4",
         "semantic-ui-css": "2.3.1",
