--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "immutable": "4.0.0-rc.9",
         "konva": "2.1.3",
         "lodash": "4.17.10",
+        "moment": "2.22.1",
         "randomcolor": "0.5.3",
         "react": "^16.3.2",
         "react-apollo": "2.1.4",
