--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "^16.3.2",
         "react-apollo": "2.1.4",
         "react-dom": "16.3.2",
+        "react-ga": "2.5.2",
         "react-konva": "1.7.3",
         "react-router-dom": "4.2.2",
         "react-scripts": "1.1.4",
