--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-scripts": "1.1.4",
         "semantic-ui-css": "2.3.1",
         "semantic-ui-react": "0.80.0",
+        "socket.io-client": "2.1.1",
         "styled-components": "3.2.6"
     },
     "devDependencies": {
