--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "konva": "2.1.3",
         "lodash": "4.17.10",
         "moment": "2.22.1",
-        "randomcolor": "0.5.3",
+        "ordinal-js": "1.1.0",
+        "rc-slider": "8.6.1",
         "react": "^16.3.2",
         "react-apollo": "2.1.4",
         "react-dom": "16.3.2",
@@ -28,8 +29,6 @@
         "react-konva": "1.7.3",
         "react-router-dom": "4.2.2",
         "react-scripts": "1.1.4",
-        "semantic-ui-css": "2.3.1",
-        "semantic-ui-react": "0.80.0",
         "socket.io-client": "2.1.1",
         "styled-components": "3.2.6"
     },
