--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "apollo-link-http": "1.5.4",
         "graphql": "0.13.2",
         "graphql-tag": "2.9.2",
-        "immutable": "4.0.0-rc.9",
         "konva": "2.1.3",
         "lodash": "4.17.10",
         "moment": "2.22.1",
@@ -41,14 +40,16 @@
         "eslint-plugin-jsx-a11y": "6.0.3",
         "eslint-plugin-promise": "3.7.0",
         "eslint-plugin-react": "7.8.2",
-        "unfetch": "3.0.0"
+        "react-app-rewired": "1.5.2",
+        "unfetch": "3.0.0",
+        "worker-loader": "2.0.0"
     },
     "scripts": {
         "check": "yarn run lint && CI=true yarn run test",
-        "start": "react-scripts start",
+        "start": "react-app-rewired start",
         "lint": "eslint -c .eslintrc src",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test --env=jsdom",
         "predeploy": "yarn build",
         "deploy": "scp -r build pubgsh:/apps/client"
     }
