--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
         'no-confusing-arrow': 0,
         'no-console': 0,
         'no-continue': 0,
+        'no-lone-blocks': 0,
         'no-mixed-operators': 0,
         'no-param-reassign': [2, { 'props': false }],
         'no-plusplus': 0,
